--- a/src/app/_components/flights-components/flight-round-trip/flight-round-trip.component.html
+++ b/src/app/_components/flights-components/flight-round-trip/flight-round-trip.component.html
@@ -1,25 +1,28 @@
-<div class="container ">
-    <div class="row radio-home">
-        <label class="radio-inline check">
-            <input name="inlineRadioOptions" id="inlineRadio1" type="radio" checked="" value="option1"> Round Trip
-            <span class="radio2"></span>
-        </label>
-        <label class="radio-inline check">
-            <input name="inlineRadioOptions" id="inlineRadio2" type="radio" value="option2"> One Way
-            <span class="radio2"></span>
-        </label>
-        <label class="radio-inline check">
-            <input name="inlineRadioOptions" id="inlineRadio3" type="radio" value="option3"> Multi City
-            <span class="radio2"></span>
-        </label>
-    </div>
+
   <div class="row">
     <div class="form-group  col-md-2 padding-rl5">
-      <input type="text" class="form-control" id="exampleInputName2" placeholder="From">
-      <span class="from form-control-feedback " aria-hidden="true"> </span>
+      <input [(ngModel)]="cityFrom"
+             [typeahead]="staticDataService.cities"
+             typeaheadOptionField="Name"
+             class="form-control"
+             placeholder="From"
+             [typeaheadOptionsLimit]="7"
+             [typeaheadMinLength]="0"
+             (keyup)="updateCitiesFrom($event)"
+             (typeaheadOnSelect)="selectCity($event,'from')"
+             >
     </div>
     <div class="form-group  col-md-2 padding-rl5">
-      <input type="email" class="form-control" id="exampleInputEmail2" placeholder="To">
+        <input [(ngModel)]="cityTo"
+        [typeahead]="staticDataService.cities"
+        typeaheadOptionField="Name"
+        class="form-control"
+        placeholder="To"
+        [typeaheadOptionsLimit]="7"
+        [typeaheadMinLength]="0"
+        (keyup)="updateCitiesTo($event)"
+        (typeaheadOnSelect)="selectCity($event,'to')"
+        >
     </div>
     <div class="form-group  col-md-3 padding-rl5">
       <input type="text" placeholder="Departing / Arrival Time" class="form-control" bsDaterangepicker>
@@ -36,7 +39,6 @@
           <label for="exampleInputEmail1">Children</label>
           <input type="number" class="form-control plus" id="exampleInputEmail1" placeholder="0">
         </div>
-        <div [innerHtml]="html"></div>
       </ng-template>
 
     </div>
@@ -53,4 +55,3 @@
       </label>
 
   </div>
-</div>
