--- a/src/app/_components/home-components/home/home.component.html
+++ b/src/app/_components/home-components/home/home.component.html
@@ -1,7 +1,7 @@
 <!-- <app-home-page></app-home-page> -->
-<app-search-result></app-search-result>
+<!-- <app-search-result ></app-search-result> -->
 <!-- <app-hotle-details></app-hotle-details> -->
-<!-- <app-flight-details></app-flight-details> -->
+ <app-flight-details></app-flight-details> 
 <!-- <app-flight-payment></app-flight-payment> -->
 <!-- <app-hotels-payment></app-hotels-payment> -->
 <app-footer></app-footer>
