--- a/src/app/_components/flights-components/flight-result/flight-result.component.html
+++ b/src/app/_components/flights-components/flight-result/flight-result.component.html
@@ -24,7 +24,7 @@
           <div class="col-md-10  padding-0  borderd-right">
             <div *ngFor="let Route of item.Routes; let i = index" >
 
-                <div class="row padding-0 ">
+                <!-- <div class="row padding-0 ">
                     <div class="row margin-0  overflow" style="margin-bottom: -5px;">
                       <div *ngIf="i=='0';else retunTemplate">
                       <div class="diagonal2">
@@ -72,6 +72,54 @@
                           </div>
                           
                   </div>
+                  </div> -->
+
+
+                  <div class="row padding-0 ">
+                    <div class="row margin-0  overflow" style="margin-bottom: -5px;">
+                      <div *ngIf="i=='0'"> 
+                      <div class="diagonal2">
+                        <h4 style="margin: 3px;"><img src="../assets/img/To copy.png"> Depature</h4>
+                      </div>      
+                    </div>               
+                   
+                    </div>
+                  
+                    <div class="itenery borderd-bottom">
+                   
+
+                        <div class="row " >
+                            <div class="col-sm-2 col-xs-6 borderd-right flight-logo" >
+                              <img src="{{Route.Segment[0].Carrier.MarketingImage}}" class="img-box-result">
+                            </div>
+                            <div class="col-sm-3 col-xs-6"style="padding: 25px 0 0 15px;">
+                              <h4 class="dark-gray tight" > {{Route.Segment[0].Origin.Airport.City}}</h4>
+                            </div>
+                            <div class="col-sm-2 col-xs-6"style="padding:15px;">
+                              <h5 class="dark-gray tight">{{Route.Segment[0].Origin.Date |  date}}</h5>
+                              <h5 class="dark-gray tight">{{Route.Segment[0].Origin.Time|  date:'h:mm a z'}}</h5>
+                              <h4 class="blue tight">{{Route.Segment[0].Origin.Airport.Code}}</h4>
+                            </div>
+                          
+                            <div class="col-sm-2 col-sm-push-3 col-xs-6"style="padding:15px;">
+                              <h5 class="dark-gray tight">{{Route.Segment[Route.Segment.length-1].Destination.Date |  date}}</h5>
+                              <h5 class="dark-gray tight">{{Route.Segment[Route.Segment.length-1].Destination.Time |  date:'h:mm a z'}}</h5>
+                              <h4 class="blue tight">{{Route.Segment[Route.Segment.length-1].Destination.Airport.Code}}</h4>
+                            </div>
+                            <div class="col-sm-3 col-sm-pull-2  text-center "style="padding:15px;">
+                              <h5 class=" tight"><b>Duration: </b>{{Route.Duration}} hr</h5>
+                              <div class="border-bottom-flight  text-center"></div>
+
+                              <h5 *ngIf="Route.Segment.length-1!=0;else NonStop" class=" tight">{{Route.Segment.length-1}} Stop</h5>
+                              <ng-template #NonStop>
+
+                                <h5 class=" tight green">Non stop</h5>
+                              </ng-template>
+                            </div>
+            
+                          </div>
+                          
+                  </div>
                   </div>
 
                 </div>
@@ -81,7 +129,11 @@
                   <h3 class="dark-gray"> {{item.Amount}} {{item.Currency}}</h3>
                   <div _ngcontent-c5="" class="form-group "><button _ngcontent-c5="" class="btn btn-orange" type="submit"(click)="item.DetailsCollapse = !item.DetailsCollapse" [attr.aria-expanded]="!item.DetailsCollapse"
                     aria-controls="collapseBasic">Details</button></div>
+                    <div _ngcontent-c5="" class="form-group "><button _ngcontent-c5="" class="btn btn-orange" type="submit"(click)="item.DetailsCollapse = !item.DetailsCollapse" [attr.aria-expanded]="!item.DetailsCollapse"
+                      aria-controls="collapseBasic">Select</button></div>
                 </div>
+
+             
             </div>
         </div>
 
