--- a/src/app/_components/header-compenents/header-web/header-web.component.html
+++ b/src/app/_components/header-compenents/header-web/header-web.component.html
@@ -1,3 +1,4 @@
+
 <div class="container-fluid nav-head">
     <div class="container">
       <div class="row">
@@ -28,7 +29,7 @@
               </div>
             </div>
   
-            <div class="btn-group bord" dropdown>
+            <!-- <div class="btn-group bord" dropdown>
               <a id="button-basic" dropdownToggle type="button" class="  lang dropdown-toggle" aria-controls="dropdown-basic">
                 USD <span class="caret"></span>
               </a>
@@ -37,8 +38,8 @@
                 <li role="menuitem"><a class="dropdown-item" href="#">UAE</a></li>
                 <li role="menuitem"><a class="dropdown-item" href="#">EGP</a></li>
               </ul>
-            </div>
-            <div class="btn-group bord" dropdown>
+            </div> -->
+            <!-- <div class="btn-group bord" dropdown>
               <a id="button-basic" dropdownToggle type="button" class="lang dropdown-toggle" aria-controls="dropdown-basic">
                 {{languageService.currentLanguageNativeName}} <span class="caret"></span>
               </a>
@@ -48,7 +49,7 @@
                 </li>
               </ul>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
