--- a/src/app/_components/home-components/footer/footer.component.html
+++ b/src/app/_components/home-components/footer/footer.component.html
@@ -15,7 +15,7 @@
         </ul>
       </div>
       <div class="col-sm-3">
-        <h4 class="orange"><b>Follow us</b></h4>
+        <h4 class="orange"><b>{{'Footer.FollowUs'|translate}}</b></h4>
         <div class="social">
           <a href="#"><img src="../assets/img/face-gray.png" alt=""></a>
           <a href="#"><img src="../assets/img/twitt-gray.png" alt=""></a>
@@ -23,7 +23,7 @@
           <a href="#"><img src="../assets/img/pint-gray.png" alt=""></a>
 
         </div>
-        <h4 class="orange"><b>Subscribe to newsletter</b></h4>
+        <h4 class="orange"><b>{{'Footer.SubscribeToNewsletter'|translate}}</b></h4>
         <div class="form-group ">
           <div class="input-group">
             <input type="text" class="form-control" id="inputGroupSuccess4" aria-describedby="inputGroupSuccess4Status">
@@ -35,8 +35,8 @@
     </div>
     <div class="row text-center" style="margin-bottom:160px;">
       <div class="col-xs-12" style="margin:30px 0 20px 0;">
-        <h3 class="orange">Awesome partners</h3>
-        <a href="#" class="dark-gray h4">View all partners</a>
+        <h3 class="orange">{{'Footer.AwesomePartners'|translate}}</h3>
+        <a href="#" class="dark-gray h4">{{'Footer.ViewAllPartners'|translate}}</a>
       </div>
       <div class="col-md-2 col-sm-6 col-xs-6 col-sm-offset-1 text-center" style="padding:15px;">
         <img src="../assets/img/logo1.png" alt="" style="width:100%;">
@@ -56,7 +56,7 @@
 
     </div>
     <div class="copy">
-      © 2019 Tour to / Designed & Developed By CYAN DIGITAL HOUSE
+      {{'Footer.Copyright'|translate}}
     </div>
 
 
