--- a/src/app/_components/home-components/home/home.component.html
+++ b/src/app/_components/home-components/home/home.component.html
@@ -1,7 +1,108 @@
-<!-- <app-home-page></app-home-page> -->
-<app-search-result ></app-search-result>
-<!-- <app-hotle-details></app-hotle-details> -->
- <!-- <app-flight-details></app-flight-details>  -->
-<!-- <app-flight-payment></app-flight-payment> -->
-<!-- <app-hotels-payment></app-hotels-payment> -->
+<div class="home-img">
+    <video autoplay muted loop id="myVideo" class="bg-video">
+        <source src="../assets/videos/sun.mp4" type="video/mp4" style="width:100%;">
+    </video>
+    <app-header></app-header>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-8 col-xs-offset-2 home-head1-container">
+                <h1 class="home-head1 orange">{{'Home.WelcomeToTourTo'|translate}} </h1>
+            </div>
+
+            <div class="col-xs-8 col-xs-offset-2 home-head1-container">
+                <h1 class="home-head2 orange">{{'Home.ExperienceTheFreedom'|translate}} </h1>
+            </div>
+            <div class="col-xs-8 col-xs-offset-2 text-center ">
+                <h3 class="orange small-head">{{'Home.PlaceExperinceEnjoy'|translate}} </h3>
+            </div>
+        </div>
+    </div>
+    <div class=" home-line"></div>
+
+    <div class="container text-center">
+
+
+        <div class="btn-group-vertical" dropdown>
+            <a (click)="show('Experience')" class="home-links ">
+                <div class="btn round ">
+                    <img src="../assets/img/experience.png" class="full-width">
+                </div>
+                <h4>{{'Home.Experience'|translate}}</h4>
+                <div class="link-strok"></div>
+            </a>
+            <a (click)="show('Flights')" class="home-links" [class.active]="showFlights">
+                <div class="btn round ">
+                    <img src="../assets/img/flight.png" class="full-width">
+                </div>
+                <h4>{{'Home.Flights'|translate}}</h4>
+                <div class="link-strok"></div>
+
+            </a>
+            <a (click)="show('Hotels')" class="home-links" [class.active]="showHotels">
+                <div class="btn round ">
+                    <img src="../assets/img/hotels.png" class="full-width">
+                </div>
+                <h4>{{'Home.Hotels'|translate}}</h4>
+                <div class="link-strok"></div>
+
+            </a>
+
+            <a class="home-links dropdown-toggle" id="button-basic" dropdownToggle type="button" aria-controls="dropdown-basic">
+                <div class="btn round ">
+                    <img src="../assets/img/packages.png" class="full-width">
+                </div>
+                <h4>{{'Home.Packages'|translate}}</h4>
+                <div class="link-strok"></div>
+
+            </a>
+            <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu dropdown-packages" role="menu" aria-labelledby="button-basic">
+                <li role="menuitem"><a class="dropdown-item" href="#"> <span class="glyphicon glyphicon-equalizer orange"
+                            aria-hidden="true"></span> {{'Home.CreateYourOwnPackage'|translate}}</a></li>
+                <li class="divider dropdown-divider"></li>
+                <li role="menuitem"><a class="dropdown-item" href="#"><span class="glyphicon glyphicon-gift orange"
+                            aria-hidden="true"></span> {{'Home.ExistingPackage'|translate}}</a></li>
+            </ul>
+
+            <a href="#" class="home-links">
+                <div class="btn round ">
+                    <img src="../assets/img/car.png" class="full-width">
+                </div>
+                <h4>{{'Home.Cars'|translate}}</h4>
+                <div class="link-strok"></div>
+
+            </a>
+            <a href="#" class="home-links">
+                <div class="btn round ">
+                    <img src="../assets/img/activities.png" class="full-width">
+                </div>
+                <h4>{{'Home.Activities'|translate}}</h4>
+                <div class="link-strok"></div>
+            </a>
+        </div>
+
+    </div>
+
+    <div class="wed-cont container">
+        <app-flights *ngIf="showFlights"></app-flights>
+        <app-hotels *ngIf="showHotels"></app-hotels>
+    </div>
+
+</div>
+<div class="home-separator">
+    {{'Home.VirginAtlantic'|translate}}</div>
+
+<app-home-experience></app-home-experience>
+
+<div class="section">
+    <div class="container">
+        <h3 class="white">{{'Home.NaturePeople'|translate}}</h3>
+        <h5 class="orange">{{'Home.DiscoverTravel'|translate}}</h5>
+        <p class="white">
+            {{'Home.JustMinutes'|translate}}
+        </p>
+    </div>
+</div>
+
+<app-home-packages></app-home-packages>
+
 <app-footer></app-footer>
